style.css
[v-cloak] {
  display: none;
}
body {
  background-image: url(WeatherPhotos/bg3.jpg);
  height: 100%;

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
@media only screen and (max-width: 760px),
  (min-device-width: 768px) and (max-device-width: 1024px) {
  table,
  thead,
  tbody,
  th,
  td,
  tr {
    display: block;
  }

  thead tr {
    position: absolute;
    top: -9999px;
    left: -9999px;
  }

  tr {
    margin: 0 0 1rem 0;
  }

  tr:nth-child(odd) {
    background: white;
  }

  td {
    border: none;
    border-bottom: 1px solid white;
    position: relative;
    padding-left: 50%;
  }

  td:before {
    position: absolute;
    top: 0;
    left: 6px;
    width: 45%;
    padding-right: 10px;
    white-space: nowrap;
  }

  td:nth-of-type(1):before {
    content: "";
  }
  td:nth-of-type(2):before {
    content: "Current Temperature:";
  }
  td:nth-of-type(3):before {
    content: "Description:";
  }
  td:nth-of-type(4):before {
    content: "Current Pressure:";
  }
  td:nth-of-type(5):before {
    content: "Current Humidity:";
  }
}

